# calmerge

./: .dockerignore  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.nginx.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
nginx/: calmerge.conf
src/calmerge/: __init__.py  app.py  cache.py  config.py  fetcher.py  merger.py
tests/: conftest.py  test_app.py  test_cache.py  test_config.py  test_fetcher.py  test_merger.py
