[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calmerge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=26.0.0",
    "httpx>=0.27",
    "icalendar>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "pytest-httpx>=0.30",
    "freezegun>=1.4",
]

[project.scripts]
calmerge = "calmerge.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/calmerge"]

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["calmerge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/calmerge"]
